--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,14 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@android:drawable/ic_menu_agenda"
         android:label="@string/app_name"
         android:roundIcon="@android:drawable/ic_menu_agenda"
         android:supportsRtl="true"
         android:theme="@style/Theme.MicroHabitCoach"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
