--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
         <receiver
             android:name=".notification.NotificationActionReceiver"
             android:exported="false" />
+        
+        <receiver
+            android:name=".activity.ActivityTransitionReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
